fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1857,13 +1857,13 @@ input, select, textarea {
 					-ms-flex-shrink: 1;
 					flex-shrink: 1;
 					padding: 3.5em 2.5em;
-					margin-bottom: 0;
 					width: auto;
 				}
 
 					#main > .panel.intro header h1 {
 						line-height: 1.4em;
-						margin-bottom: 0;
+						margin-top: 1em;
+						margin-bottom: 1em;
 					}
 
 					#main > .panel.intro header h2 {
@@ -1874,7 +1874,7 @@ input, select, textarea {
 					#main > .panel.intro header p {
 						letter-spacing: -0.015em;
 						font-size: 1.0em;
-						margin: 0.25em 0 0 0;
+						margin-bottom: 0.5em;
 					}
 
 				
